[gd_scene load_steps=4 format=3 uid="uid://bs7cy46mfg3li"]

[ext_resource type="Texture2D" uid="uid://ncybbr47s66a" path="res://Sprites/Weapons/Grenade.png" id="1_dvlbg"]
[ext_resource type="Script" path="res://Scripts/Weapons/grenade.gd" id="2_file4"]
[ext_resource type="AudioStream" uid="uid://br61mrhe0ixlj" path="res://Sounds/Throw.mp3" id="3_oaxa2"]

[node name="Grenade" type="Sprite2D"]
texture = ExtResource("1_dvlbg")
hframes = 2
script = ExtResource("2_file4")
shoot_cooldown = 2.5
original_energy_use = 70.0
energy_recover_cooldown = 3.0

[node name="Throw_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_oaxa2")
volume_db = 8.0
pitch_scale = 0.9
bus = &"Sounds"

[node name="Recharge_Visual" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="timeout" from="Recharge_Visual" to="." method="_on_recharge_visual_timeout"]
